--- a/15_chapter_natural-language-processing-pretraining/word2vec-pretraining.ipynb
+++ b/15_chapter_natural-language-processing-pretraining/word2vec-pretraining.ipynb
@@ -154,13 +154,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[ 0.7606,  0.3872, -0.1864,  1.1732],\n",
-       "         [ 1.5035,  2.3623, -1.7542, -1.4990],\n",
-       "         [-1.2639, -1.5313,  2.1719,  0.4151]],\n",
+       "tensor([[[-0.2640,  0.1156,  1.6577,  0.4000],\n",
+       "         [-0.8929, -0.2426, -1.3192,  0.0701],\n",
+       "         [-1.6805, -0.3771, -0.1998, -0.5471]],\n",
        "\n",
-       "        [[-1.9079,  0.2434,  1.5395,  1.2990],\n",
-       "         [ 0.7470,  1.0129,  0.4039,  0.0591],\n",
-       "         [-0.6293, -0.1814, -0.4782, -0.5289]]], grad_fn=<EmbeddingBackward0>)"
+       "        [[-0.8592, -0.1477,  1.1307,  0.8296],\n",
+       "         [ 0.1410, -2.0397,  0.3587, -0.1851],\n",
+       "         [-1.6991, -0.3018, -1.5718, -0.6056]]], grad_fn=<EmbeddingBackward0>)"
       ]
      },
      "execution_count": 3,
@@ -562,7 +562,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss 0.410, 223485.0 tokens/sec on cuda:0\n"
+      "loss 0.410, 479473.1 tokens/sec on cuda:0\n"
      ]
     },
     {
@@ -576,7 +576,7 @@
        "  <rdf:RDF xmlns:dc=\"http://purl.org/dc/elements/1.1/\" xmlns:cc=\"http://creativecommons.org/ns#\" xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\">\n",
        "   <cc:Work>\n",
        "    <dc:type rdf:resource=\"http://purl.org/dc/dcmitype/StillImage\"/>\n",
-       "    <dc:date>2023-08-18T19:47:53.616066</dc:date>\n",
+       "    <dc:date>2025-01-31T21:22:14.805400</dc:date>\n",
        "    <dc:format>image/svg+xml</dc:format>\n",
        "    <dc:creator>\n",
        "     <cc:Agent>\n",
@@ -612,16 +612,16 @@
        "     <g id=\"line2d_1\">\n",
        "      <path d=\"M 50.14375 145.8 \n",
        "L 50.14375 7.2 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#p72e45d4a6d)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_2\">\n",
        "      <defs>\n",
-       "       <path id=\"m37a4bb8190\" d=\"M 0 0 \n",
+       "       <path id=\"m5054eb8ff4\" d=\"M 0 0 \n",
        "L 0 3.5 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m37a4bb8190\" x=\"50.14375\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m5054eb8ff4\" x=\"50.14375\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -651,11 +651,11 @@
        "     <g id=\"line2d_3\">\n",
        "      <path d=\"M 98.96875 145.8 \n",
        "L 98.96875 7.2 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#p72e45d4a6d)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m37a4bb8190\" x=\"98.96875\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m5054eb8ff4\" x=\"98.96875\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -695,11 +695,11 @@
        "     <g id=\"line2d_5\">\n",
        "      <path d=\"M 147.79375 145.8 \n",
        "L 147.79375 7.2 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#p72e45d4a6d)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m37a4bb8190\" x=\"147.79375\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m5054eb8ff4\" x=\"147.79375\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -747,11 +747,11 @@
        "     <g id=\"line2d_7\">\n",
        "      <path d=\"M 196.61875 145.8 \n",
        "L 196.61875 7.2 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#p72e45d4a6d)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m37a4bb8190\" x=\"196.61875\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m5054eb8ff4\" x=\"196.61875\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -786,11 +786,11 @@
        "     <g id=\"line2d_9\">\n",
        "      <path d=\"M 245.44375 145.8 \n",
        "L 245.44375 7.2 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#p72e45d4a6d)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m37a4bb8190\" x=\"245.44375\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m5054eb8ff4\" x=\"245.44375\" y=\"145.8\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -955,23 +955,23 @@
        "   <g id=\"matplotlib.axis_2\">\n",
        "    <g id=\"ytick_1\">\n",
        "     <g id=\"line2d_11\">\n",
-       "      <path d=\"M 50.14375 145.570215 \n",
-       "L 245.44375 145.570215 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "      <path d=\"M 50.14375 114.757862 \n",
+       "L 245.44375 114.757862 \n",
+       "\" clip-path=\"url(#p72e45d4a6d)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_12\">\n",
        "      <defs>\n",
-       "       <path id=\"m24ac6a49c3\" d=\"M 0 0 \n",
+       "       <path id=\"m256b06a449\" d=\"M 0 0 \n",
        "L -3.5 0 \n",
        "\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m24ac6a49c3\" x=\"50.14375\" y=\"145.570215\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m256b06a449\" x=\"50.14375\" y=\"114.757862\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
-       "      <!-- 0.40 -->\n",
-       "      <g transform=\"translate(20.878125 149.369433) scale(0.1 -0.1)\">\n",
+       "      <!-- 0.45 -->\n",
+       "      <g transform=\"translate(20.878125 118.55708) scale(0.1 -0.1)\">\n",
        "       <defs>\n",
        "        <path id=\"DejaVuSans-30\" d=\"M 2034 4250 \n",
        "Q 1547 4250 1301 3770 \n",
@@ -1005,45 +1005,24 @@
        "       <use xlink:href=\"#DejaVuSans-30\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-2e\" x=\"63.623047\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-34\" x=\"95.410156\"/>\n",
-       "       <use xlink:href=\"#DejaVuSans-30\" x=\"159.033203\"/>\n",
+       "       <use xlink:href=\"#DejaVuSans-35\" x=\"159.033203\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "    </g>\n",
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_13\">\n",
-       "      <path d=\"M 50.14375 115.045381 \n",
-       "L 245.44375 115.045381 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "      <path d=\"M 50.14375 83.690962 \n",
+       "L 245.44375 83.690962 \n",
+       "\" clip-path=\"url(#p72e45d4a6d)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m24ac6a49c3\" x=\"50.14375\" y=\"115.045381\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m256b06a449\" x=\"50.14375\" y=\"83.690962\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
-       "      <!-- 0.45 -->\n",
-       "      <g transform=\"translate(20.878125 118.8446) scale(0.1 -0.1)\">\n",
-       "       <use xlink:href=\"#DejaVuSans-30\"/>\n",
-       "       <use xlink:href=\"#DejaVuSans-2e\" x=\"63.623047\"/>\n",
-       "       <use xlink:href=\"#DejaVuSans-34\" x=\"95.410156\"/>\n",
-       "       <use xlink:href=\"#DejaVuSans-35\" x=\"159.033203\"/>\n",
-       "      </g>\n",
-       "     </g>\n",
-       "    </g>\n",
-       "    <g id=\"ytick_3\">\n",
-       "     <g id=\"line2d_15\">\n",
-       "      <path d=\"M 50.14375 84.520548 \n",
-       "L 245.44375 84.520548 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
-       "     </g>\n",
-       "     <g id=\"line2d_16\">\n",
-       "      <g>\n",
-       "       <use xlink:href=\"#m24ac6a49c3\" x=\"50.14375\" y=\"84.520548\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
-       "      </g>\n",
-       "     </g>\n",
-       "     <g id=\"text_9\">\n",
        "      <!-- 0.50 -->\n",
-       "      <g transform=\"translate(20.878125 88.319767) scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(20.878125 87.490181) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-30\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-2e\" x=\"63.623047\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-35\" x=\"95.410156\"/>\n",
@@ -1051,20 +1030,20 @@
        "      </g>\n",
        "     </g>\n",
        "    </g>\n",
-       "    <g id=\"ytick_4\">\n",
-       "     <g id=\"line2d_17\">\n",
-       "      <path d=\"M 50.14375 53.995715 \n",
-       "L 245.44375 53.995715 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "    <g id=\"ytick_3\">\n",
+       "     <g id=\"line2d_15\">\n",
+       "      <path d=\"M 50.14375 52.624062 \n",
+       "L 245.44375 52.624062 \n",
+       "\" clip-path=\"url(#p72e45d4a6d)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
-       "     <g id=\"line2d_18\">\n",
+       "     <g id=\"line2d_16\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m24ac6a49c3\" x=\"50.14375\" y=\"53.995715\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m256b06a449\" x=\"50.14375\" y=\"52.624062\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
-       "     <g id=\"text_10\">\n",
+       "     <g id=\"text_9\">\n",
        "      <!-- 0.55 -->\n",
-       "      <g transform=\"translate(20.878125 57.794934) scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(20.878125 56.423281) scale(0.1 -0.1)\">\n",
        "       <use xlink:href=\"#DejaVuSans-30\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-2e\" x=\"63.623047\"/>\n",
        "       <use xlink:href=\"#DejaVuSans-35\" x=\"95.410156\"/>\n",
@@ -1072,20 +1051,20 @@
        "      </g>\n",
        "     </g>\n",
        "    </g>\n",
-       "    <g id=\"ytick_5\">\n",
-       "     <g id=\"line2d_19\">\n",
-       "      <path d=\"M 50.14375 23.470882 \n",
-       "L 245.44375 23.470882 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
+       "    <g id=\"ytick_4\">\n",
+       "     <g id=\"line2d_17\">\n",
+       "      <path d=\"M 50.14375 21.557163 \n",
+       "L 245.44375 21.557163 \n",
+       "\" clip-path=\"url(#p72e45d4a6d)\" style=\"fill: none; stroke: #b0b0b0; stroke-width: 0.8; stroke-linecap: square\"/>\n",
        "     </g>\n",
-       "     <g id=\"line2d_20\">\n",
+       "     <g id=\"line2d_18\">\n",
        "      <g>\n",
-       "       <use xlink:href=\"#m24ac6a49c3\" x=\"50.14375\" y=\"23.470882\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
+       "       <use xlink:href=\"#m256b06a449\" x=\"50.14375\" y=\"21.557163\" style=\"stroke: #000000; stroke-width: 0.8\"/>\n",
        "      </g>\n",
        "     </g>\n",
-       "     <g id=\"text_11\">\n",
+       "     <g id=\"text_10\">\n",
        "      <!-- 0.60 -->\n",
-       "      <g transform=\"translate(20.878125 27.2701) scale(0.1 -0.1)\">\n",
+       "      <g transform=\"translate(20.878125 25.356382) scale(0.1 -0.1)\">\n",
        "       <defs>\n",
        "        <path id=\"DejaVuSans-36\" d=\"M 2113 2584 \n",
        "Q 1688 2584 1439 2293 \n",
@@ -1125,7 +1104,7 @@
        "      </g>\n",
        "     </g>\n",
        "    </g>\n",
-       "    <g id=\"text_12\">\n",
+       "    <g id=\"text_11\">\n",
        "     <!-- loss -->\n",
        "     <g transform=\"translate(14.798437 86.157813) rotate(-90) scale(0.1 -0.1)\">\n",
        "      <defs>\n",
@@ -1175,38 +1154,33 @@
        "     </g>\n",
        "    </g>\n",
        "   </g>\n",
-       "   <g id=\"line2d_21\">\n",
-       "    <path d=\"M 11.025364 13.5 \n",
-       "L 20.731979 60.650035 \n",
-       "L 30.438593 79.577468 \n",
-       "L 40.145207 89.734196 \n",
-       "L 49.851822 96.22092 \n",
-       "L 50.14375 96.377833 \n",
-       "L 59.850364 101.19076 \n",
-       "L 69.556979 104.893796 \n",
-       "L 79.263593 107.935897 \n",
-       "L 88.970207 110.571966 \n",
-       "L 98.676822 112.87733 \n",
-       "L 98.96875 112.939004 \n",
-       "L 108.675364 115.405995 \n",
-       "L 118.381979 117.593128 \n",
-       "L 128.088593 119.590033 \n",
-       "L 137.795207 121.404224 \n",
-       "L 147.501822 123.078123 \n",
-       "L 147.79375 123.125557 \n",
-       "L 157.500364 125.19841 \n",
-       "L 167.206979 127.089122 \n",
-       "L 176.913593 128.791603 \n",
-       "L 186.620207 130.342245 \n",
-       "L 196.326822 131.761658 \n",
-       "L 196.61875 131.803787 \n",
-       "L 206.325364 133.671548 \n",
-       "L 216.031979 135.334055 \n",
-       "L 225.738593 136.846859 \n",
-       "L 235.445207 138.20675 \n",
-       "L 245.151822 139.465091 \n",
+       "   <g id=\"line2d_19\">\n",
+       "    <path d=\"M 11.08375 13.5 \n",
+       "L 20.84875 60.591163 \n",
+       "L 30.61375 79.37376 \n",
+       "L 40.37875 89.353924 \n",
+       "L 50.14375 95.71476 \n",
+       "L 59.90875 100.496997 \n",
+       "L 69.67375 104.250248 \n",
+       "L 79.43875 107.36343 \n",
+       "L 89.20375 110.059778 \n",
+       "L 98.96875 112.420592 \n",
+       "L 108.73375 114.938388 \n",
+       "L 118.49875 117.201603 \n",
+       "L 128.26375 119.275039 \n",
+       "L 138.02875 121.120194 \n",
+       "L 147.79375 122.84754 \n",
+       "L 157.55875 124.977799 \n",
+       "L 167.32375 126.885335 \n",
+       "L 177.08875 128.631435 \n",
+       "L 186.85375 130.230386 \n",
+       "L 196.61875 131.692231 \n",
+       "L 206.38375 133.574803 \n",
+       "L 216.14875 135.25816 \n",
+       "L 225.91375 136.796267 \n",
+       "L 235.67875 138.200714 \n",
        "L 245.44375 139.5 \n",
-       "\" clip-path=\"url(#p8bceb1650b)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
+       "\" clip-path=\"url(#p72e45d4a6d)\" style=\"fill: none; stroke: #1f77b4; stroke-width: 1.5; stroke-linecap: square\"/>\n",
        "   </g>\n",
        "   <g id=\"patch_3\">\n",
        "    <path d=\"M 50.14375 145.8 \n",
@@ -1231,7 +1205,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p8bceb1650b\">\n",
+       "  <clipPath id=\"p72e45d4a6d\">\n",
        "   <rect x=\"50.14375\" y=\"7.2\" width=\"195.3\" height=\"138.6\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -1291,9 +1265,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cosine sim=0.702: microprocessor\n",
-      "cosine sim=0.649: mips\n",
-      "cosine sim=0.643: intel\n"
+      "cosine sim=0.759: microprocessor\n",
+      "cosine sim=0.698: intel\n",
+      "cosine sim=0.647: chips\n"
      ]
     }
    ],
@@ -1345,8 +1319,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
