--- a/2_chapter_preliminaries/ndarray.ipynb
+++ b/2_chapter_preliminaries/ndarray.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 228,
    "id": "01fa8e58",
    "metadata": {
     "execution": {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 229,
    "id": "b6aa30a9",
    "metadata": {
     "execution": {
@@ -138,7 +138,7 @@
        "tensor([ 0.,  1.,  2.,  3.,  4.,  5.,  6.,  7.,  8.,  9., 10., 11.])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 230,
    "id": "640cadaf",
    "metadata": {
     "execution": {
@@ -188,7 +188,7 @@
        "12"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 231,
    "id": "6e0a9616",
    "metadata": {
     "execution": {
@@ -235,7 +235,7 @@
        "torch.Size([12])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 232,
    "id": "6092207c",
    "metadata": {
     "execution": {
@@ -289,7 +289,7 @@
        "        [ 8.,  9., 10., 11.]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 233,
    "id": "383cafca",
    "metadata": {
     "execution": {
@@ -354,7 +354,7 @@
        "         [0., 0., 0., 0.]]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 234,
    "id": "0ea249d4",
    "metadata": {
     "execution": {
@@ -403,7 +403,7 @@
        "         [1., 1., 1., 1.]]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 235,
    "id": "2254595d",
    "metadata": {
     "execution": {
@@ -450,12 +450,12 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.1351, -0.9099, -0.2028,  2.1937],\n",
-       "        [-0.3200, -0.7545,  0.8086, -1.8730],\n",
-       "        [ 0.3929,  0.4931,  0.9114, -0.7072]])"
+       "tensor([[ 0.3620,  0.0494,  0.5405, -0.3573],\n",
+       "        [-0.0776, -0.9660, -0.2192,  1.0989],\n",
+       "        [-0.4543, -0.2755,  1.5128, -2.6399]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 236,
    "id": "b26863d8",
    "metadata": {
     "execution": {
@@ -505,7 +505,7 @@
        "        [4, 3, 2, 1]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 237,
    "id": "d9049a53",
    "metadata": {
     "execution": {
@@ -566,7 +566,7 @@
        "         [ 8.,  9., 10., 11.]]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 238,
    "id": "9246619c",
    "metadata": {
     "execution": {
@@ -613,7 +613,7 @@
        "        [ 8.,  9., 10., 11.]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 239,
    "id": "0532f024",
    "metadata": {
     "execution": {
@@ -666,7 +666,7 @@
        "        [ 8.,  9., 10., 11.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 240,
    "id": "6dd6724c",
    "metadata": {
     "execution": {
@@ -734,7 +734,7 @@
        "         22026.4648,  59874.1406])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 241,
    "id": "89bc996d",
    "metadata": {
     "execution": {
@@ -801,7 +801,7 @@
        " tensor([ 1.,  4., 16., 64.]))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 242,
    "id": "43aa9012",
    "metadata": {
     "execution": {
@@ -869,7 +869,7 @@
        "         [ 8.,  9., 10., 11.,  4.,  3.,  2.,  1.]]))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 243,
    "id": "91d39e58",
    "metadata": {
     "execution": {
@@ -920,7 +920,7 @@
        "        [False, False, False, False]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 244,
    "id": "080b0125",
    "metadata": {
     "execution": {
@@ -962,7 +962,7 @@
        "tensor(66.)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 245,
    "id": "be37d2de",
    "metadata": {
     "execution": {
@@ -1024,7 +1024,7 @@
        " tensor([[0, 1]]))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 246,
    "id": "9f62e827",
    "metadata": {
     "execution": {
@@ -1076,7 +1076,7 @@
        "        [2, 3]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 247,
    "id": "754a7433",
    "metadata": {
     "execution": {
@@ -1132,7 +1132,7 @@
        "False"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 248,
    "id": "c4d62609",
    "metadata": {
     "execution": {
@@ -1206,8 +1206,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id(Z): 140381179266448\n",
-      "id(Z): 140381179266448\n"
+      "id(Z): 140558549083504\n",
+      "id(Z): 140558549083504\n"
      ]
     }
    ],
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 249,
    "id": "b8c13447",
    "metadata": {
     "execution": {
@@ -1256,7 +1256,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 250,
    "id": "576963aa",
    "metadata": {
     "execution": {
@@ -1317,7 +1317,7 @@
        "(numpy.ndarray, torch.Tensor)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 251,
    "id": "388c5252",
    "metadata": {
     "execution": {
@@ -1362,7 +1362,7 @@
        "(tensor([3.5000]), 3.5, 3.5, 3)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,8 +1406,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
