--- a/2_chapter_preliminaries/linear-algebra.ipynb
+++ b/2_chapter_preliminaries/linear-algebra.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 191,
    "id": "dc36b473",
    "metadata": {
     "execution": {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 192,
    "id": "4fc9ba1d",
    "metadata": {
     "execution": {
@@ -111,7 +111,7 @@
        "(tensor(5.), tensor(6.), tensor(1.5000), tensor(9.))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 193,
    "id": "91cd966f",
    "metadata": {
     "execution": {
@@ -180,7 +180,7 @@
        "tensor([0, 1, 2])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 194,
    "id": "ba15a197",
    "metadata": {
     "execution": {
@@ -235,7 +235,7 @@
        "tensor(2)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 195,
    "id": "871cd7e6",
    "metadata": {
     "execution": {
@@ -281,7 +281,7 @@
        "3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 196,
    "id": "34ea04c3",
    "metadata": {
     "execution": {
@@ -325,7 +325,7 @@
        "torch.Size([3])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 197,
    "id": "80c49751",
    "metadata": {
     "execution": {
@@ -405,7 +405,7 @@
        "        [4, 5]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 198,
    "id": "7ef1e23b",
    "metadata": {
     "execution": {
@@ -468,7 +468,7 @@
        "        [1, 3, 5]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 199,
    "id": "028e06ed",
    "metadata": {
     "execution": {
@@ -515,7 +515,7 @@
        "        [True, True, True]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 200,
    "id": "306d610e",
    "metadata": {
     "execution": {
@@ -603,7 +603,7 @@
        "         [20, 21, 22, 23]]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 201,
    "id": "53a34bc0",
    "metadata": {
     "execution": {
@@ -655,7 +655,7 @@
        "         [ 6.,  8., 10.]]))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 202,
    "id": "1e2c0645",
    "metadata": {
     "execution": {
@@ -716,7 +716,7 @@
        "        [ 9., 16., 25.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 203,
    "id": "c5c86fb1",
    "metadata": {
     "execution": {
@@ -767,7 +767,7 @@
        " torch.Size([2, 3, 4]))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 204,
    "id": "5a3c4cbd",
    "metadata": {
     "execution": {
@@ -816,7 +816,7 @@
        "(tensor([0., 1., 2.]), tensor(3.))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 205,
    "id": "7594e574",
    "metadata": {
     "execution": {
@@ -863,7 +863,7 @@
        "(torch.Size([2, 3]), tensor(15.))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 206,
    "id": "14d191be",
    "metadata": {
     "execution": {
@@ -914,7 +914,7 @@
        "(torch.Size([2, 3]), torch.Size([3]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 207,
    "id": "ee3c0559",
    "metadata": {
     "execution": {
@@ -956,7 +956,7 @@
        "(torch.Size([2, 3]), torch.Size([2]))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 208,
    "id": "25b99ea4",
    "metadata": {
     "execution": {
@@ -999,7 +999,7 @@
        "tensor(True)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 209,
    "id": "9f41e037",
    "metadata": {
     "execution": {
@@ -1046,7 +1046,7 @@
        "(tensor(2.5000), tensor(2.5000))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 210,
    "id": "f268d8be",
    "metadata": {
     "execution": {
@@ -1089,7 +1089,7 @@
        "(tensor([1.5000, 2.5000, 3.5000]), tensor([1.5000, 2.5000, 3.5000]))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 211,
    "id": "863c5aca",
    "metadata": {
     "execution": {
@@ -1138,7 +1138,7 @@
        " torch.Size([2, 1]))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 212,
    "id": "93d20f26",
    "metadata": {
     "execution": {
@@ -1184,7 +1184,7 @@
        "        [0.2500, 0.3333, 0.4167]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 213,
    "id": "e2de0ae7",
    "metadata": {
     "execution": {
@@ -1229,7 +1229,7 @@
        "        [3., 5., 7.]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 214,
    "id": "5575e11a",
    "metadata": {
     "execution": {
@@ -1283,7 +1283,7 @@
        "(tensor([0., 1., 2.]), tensor([1., 1., 1.]), tensor(3.))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 215,
    "id": "b5186254",
    "metadata": {
     "execution": {
@@ -1327,7 +1327,7 @@
        "tensor(3.)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 216,
    "id": "1a99c29a",
    "metadata": {
     "execution": {
@@ -1458,7 +1458,7 @@
        "(torch.Size([2, 3]), torch.Size([3]), tensor([ 5., 14.]), tensor([ 5., 14.]))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 217,
    "id": "99535047",
    "metadata": {
     "execution": {
@@ -1579,7 +1579,7 @@
        "         [12., 12., 12., 12.]]))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 218,
    "id": "e215c544",
    "metadata": {
     "execution": {
@@ -1658,7 +1658,7 @@
        "tensor(5.)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1690,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 219,
    "id": "8a3e0562",
    "metadata": {
     "execution": {
@@ -1711,7 +1711,7 @@
        "tensor(7.)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 220,
    "id": "3e00a124",
    "metadata": {
     "execution": {
@@ -1775,7 +1775,7 @@
        "tensor(6.)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,8 +1887,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "d2l-en",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.16"
   },
   "required_libs": []
  },
